@@ -1,8 +1,9 @@
 2.3.0 | ??-???-????
 ===================
-    - reserved ` character for future actions
     - added assign variables action = .Now it's possible to use runtime variables inside nexl expressions
     - added separator action ;
+    - added object key-value pairs resolution action `
+    - added inverted object property resolution action %
     - nexl.functions.system renamed to nexl.funcs.sys ( nexl.functions.system is left for backward compatibility )
     - nexl.functions.user renamed to nexl.funcs.usr ( nexl.functions.user is left for backward compatibility )
     - inc(), dec(), div(), mult(), mod() now can accept multiple arguments
